--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-        <title>qwert</title>
+        <title>asdf</title>
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        qwert
+        asdf
         <script src="./index.js"></script>
     </body>
 </html>
