--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>asdf</title>
+        <title>qwert</title>
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
